# project_rich_snowball

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND_API_REFERENCE_FOR_FRONTEND.md  BACKEND_ARCHITECTURE_AUDIT_V4_READINESS_20260525.md  BACKEND_AUDIT_REPORT_v3_20260523.md  BACKEND_COMPREHENSIVE_REVIEW_20260505.md  BACKEND_COMPREHENSIVE_v3.md  BACKEND_DETAILED_REVIEW_20260522_EXECUTED.md  BACKEND_FEATURE_ROADMAP.md  BACKEND_ITERATION_AND_REVIEW_PLAN.md  BACKEND_ITERATION_CODE_REVIEW_20260514.md  BACKEND_ITERATION_FOR_FRONTEND_FIXES.md  BACKEND_ITERATION_PLAN.md  BACKEND_ITERATION_PLAN_v5_ROBUST.md  BACKEND_ITERATION_PLAN_v6_PIPELINE_ALIGNED.md  BACKEND_ITERATION_PLAN_v7_COMPREHENSIVE.md  BACKEND_ITERATION_PLAN_v8_20260509.md  BACKEND_KLINE_PARTITION_STRATEGY_REPORT_20260524.md  BACKEND_P0_P1_FIX_PLAN.md  BACKEND_REVIEW_REPORT.md  BACKEND_REVIEW_REPORT_REVISED.md  BACKEND_REVIEW_SUPPLEMENTARY.md  BACKEND_ROADMAP_V3_20260604.md  BACKEND_ROADMAP_v1_20260525.md  BACKEND_ROADMAP_v2_20260529.md  BACKEND_RUNTIME_ISSUES.md  BACKEND_TECH_REVIEW_AND_ITERATION_PLAN_20260505.md  BACKEND_TEST_PLAN.md  BACKEND_TEST_PLAN_IMPROVED.md  BACKEND_TEST_PLAN_REVISED.md  DATA_COLLECTOR_REVIEW_AND_FIXES.md  DATA_PIPELINE_AND_POSTGRES_GUIDE.md  DATA_PIPELINE_DESIGN.md  DEEP_CODE_REVIEW_FINDINGS.md  FRONTEND_ITERATION_PLAN_LIGHTWEIGHT_CHARTS.md  FRONTEND_ITERATION_PLAN_v6_20260528.md  FRONTEND_QUALITY_AUDIT_V3_20260525.md  FRONTEND_REVIEW_AND_ITERATION_PLAN_20260514.md  (+23 more)
python/: .dockerignore  Dockerfile  alembic.ini  backfill_fut_daily.py  config.py  dependencies.py  dev.db-shm  dev.db-wal  dev.db.bak  errors.py  futures_community.db-shm  futures_community.db-wal  futures_community.db.backup.20260502_223808  init_data.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_constraint.py  test_constraint2.py  utils.py  worker.py
python/alembic/: env.py
python/alembic/versions/: 00da0b5a5a4a_add_contract_type_to_fut_contracts.py  03748a4fc2a5_add_status_to_opinions.py  06867a613480_add_limit_price_precision_and_trading_.py  090b961056bb_drop_comments_product_id_column.py  0cdaf00da990_add_strategy_evolution_lifecycle_tables.py  1120a1ca174c_migrate_remaining_price_fields_from_.py  1f20e54ea7c0_add_comment_price_level_id.py  20260529_add_scope_contract_to_price_levels.py  21238bb1117f_drop_comment_product_fk_make_variety_.py  27e011e4aced_add_price_levels_table.py  2f4b824f1162_add_missing_indexes.py  36075c47fab3_merge_comment_variety_and_fut_indexes.py  3945d950ad48_add_data_ingestion_runs_table.py  ab0c82d41a97_merge_heads.py  (+47 more)
python/data/: trading_calendar.json  zz1000_options.csv
python/data_collector/: adapters.py  akshare_collector.py  base.py  cleaner.py  collector_registry.py  file_collector.py  init_mock_data.py  init_varieties.py  job_registry.py  mock_collector.py  pipeline.py  scheduler.py  tushare_collector.py  upsert.py
python/docs/: api_error_contract.md  factor_integration.md  kline_benchmark_20260529.md  kline_partitioning.md  observability_runbook.md  postgres_acceptance.md  postgres_backup_runbook.md  productdb_sunset_plan.md  settings_api.md  sse_scaling_strategy.md
python/lib/: technical_indicators.py
python/middleware/: api_version.py  rate_limit.py
python/routers/: agents.py  alerts.py  auth.py  chat.py  comments.py  contracts.py  evolution.py  factors.py  frontend_logs.py  health.py  kline.py  llm_config.py  market.py  metrics_dashboard.py  news.py  opinions.py  portfolio.py  price_alerts.py  price_levels.py  products.py  realtime.py  settings.py  strategies.py  varieties.py  watchlists.py  workspace.py
python/scripts/: _pg_utils.py  backfill_kline_contract_id.py  backfill_missing_contracts.py  backup_postgres.py  benchmark_kline.py  data_quality_report.py  dedup_kline_null_contract.py  fetch_warehouse_receipts.py  fix_varieties_contract_code.py  import_factor_pack.py  import_wanfactor_selected.py  ingest_tushare_sample.py  migrate_comment_variety_id.py  migrate_factor_package_id.py  migrate_kline_to_fut_daily.py  query_t1_settle.sql  restore_postgres.py  run_acceptance.py  run_acceptance.sh  seed_dev_db.py  seed_quantative_factors.py  test_fut_settle_query.py  test_fut_settle_query2.py  test_fut_settle_query3.py  test_fut_settle_query4.py  test_fut_settle_query5.py  test_fut_wsr_symbol.py  update_trading_calendar.py  verify_tushare.py
python/services/: ai_chat.py  alert_events.py  cache.py  circuit_breaker.py  continuous_kline.py  data_catalog.py  kline_period.py  llm_config.py  logging_config.py  metrics.py  news_fetcher.py  realtime_state.py  redis_client.py  trading_calendar.py
python/templates/: index.html
python/tests/: _health_scheduler_403.py  conftest.py  test_agent_data_preflight.py  test_agent_streaming.py  test_agents_core.py  test_agents_router.py  test_alert_events.py  test_api_version.py  test_backfill_kline_contract_id.py  test_backtest_agent.py  test_backtest_engine.py  test_backup_scripts.py  test_cache_orm_detached.py  test_chat.py  test_circuit_breaker.py  test_comment_validation_and_pagination.py  test_contracts.py  test_cors_variable.py  test_csrf_protection.py  test_data_catalog.py  test_data_quality.py  test_data_quality_agent.py  test_database_tools.py  test_evolution_db_models.py  test_evolution_router.py  test_factor_mining_agent.py  test_factor_strategy.py  test_factors_router.py  test_frontend_logs.py  test_frontend_logs_query.py  test_intent_router.py  test_kline_seeded_api.py  test_kline_service.py  test_llm_config.py  test_market_data_service.py  test_metrics.py  test_metrics_dashboard.py  test_multi_condition_strategy.py  test_news.py  test_ondelete_cascade.py  (+36 more)
python/tushare_pg_ingest/: README.md  __init__.py  check_dupes.py  common.py  fetch_zz1000_option_daily.py  fetch_zz1000_option_spot.py  ingest_all.py  ingest_basic.py  ingest_commission_9qihuo.py  ingest_contracts.py  ingest_daily.py  ingest_holding.py  ingest_mapping.py  ingest_minutes.py  ingest_options.py  ingest_price_limit.py  ingest_settle.py  ingest_weekly_detail.py  ingest_wsr.py  mo2506_daily_test.csv  verify_fut_daily.py
(+428 files in other folders)
