[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futures-community-api"
version = "2.0.0"
description = "期货交流社区后端 API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "alembic",
    "tests",
    "tushare_pg_ingest",
    "scripts",
    "data_collector",
    "routers",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long（我们已设置 line-length = 120）
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
# 兼容旧代码：允许 implicit Optional（def foo(x: str = None)）
implicit_optional = true

# 忽略第三方库无类型提示的报错
ignore_missing_imports = true

# mypy 策略说明：
# - SQLAlchemy 1.x 风格的 Column(Integer) 在 mypy 下会产生大量误报（Column[int] vs int）
# - 根治方案：模型迁移到 Mapped[T] = mapped_column(...)（SQLAlchemy 2.0 风格）
# - 当前策略：routers/ 作为薄层暂时忽略；models.py/测试/迁移/脚本保持排除；
#   services/ 和 pipeline_tasks/ 已纳入检查，continuous_kline/trading_calendar 已修复。
exclude = [
    "models.py",
    "routers/",
    "tests/",
    "alembic/",
    "tushare_pg_ingest/",
    "scripts/",
]

# routers/ 是薄层，大量 SQLAlchemy Column 类型误报非真实错误；
# 随着模型迁移到 Mapped[T] 后可逐步移除。
[[tool.mypy.overrides]]
module = ["routers.*"]
ignore_errors = true

# 为 data_collector/ 下尚未清理的旧模块暂时忽略类型错误，
# 使已拆分的 pipeline_tasks/ 能真正接受 mypy 检查。
[[tool.mypy.overrides]]
module = [
    "data_collector.akshare_collector",
    "data_collector.mock_collector",
    "data_collector.tushare_collector",
    "data_collector.file_collector",
    "data_collector.cleaner",
    "data_collector.upsert",
    "data_collector.pipeline",
    "data_collector.scheduler",
    "data_collector.collector_registry",
    "data_collector.job_registry",
]
ignore_errors = true

# services/domain/ 模块类型债务较重，暂不强制；
# 随着重构推进可逐步移除以下 ignore。
[[tool.mypy.overrides]]
module = [
    "services.domain.workspace_service",
    "services.domain.comment_service",
    "services.domain.price_level_service",
    "services.domain.watchlist_service",
]
ignore_errors = true
